<resources>
    <string name="app_name">HW2_ExpenseApp</string>
    <string name="Add_Expense">Add Expense</string>
    <string name="Edit_Expense">Edit Expense</string>
    <string name="Delete_Expense">Delete Expense</string>
    <string name="Show_Expenses">Show Expenses</string>
    <string name="Finish">Finish</string>
    <string name="Add_An_Expense">Add An Expense</string>
    <string name="expense_name">Expense Name</string>
    <string name="Category">Category</string>
    <string name="Select_Category">Select_Category</string>
    <string name="Amount">Amount</string>
    <string name="Date">Date</string>
    <string name="Receipt">Receipt</string>
    <string name="Select_Expense">Select Expense</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="Expense_Details">Expense Details</string>
    <string name="Name">Name</string>

    <string-array name="expense_categories">
        <item>Groceries</item>
        <item>Invoice</item>
        <item>Transportation</item>
        <item>Shopping</item>
        <item>Rent</item>
        <item>Trips</item>
        <item>Utilities</item>
        <item>Other</item>
    </string-array>

</resources>
