<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itcs4180.hw2_expenseapp.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add_Expense"
        android:id="@+id/buttonDelete"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="addButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Edit_Expense"
        android:id="@+id/buttonEditExpense"
        android:layout_below="@+id/buttonDelete"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="editButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Delete_Expense"
        android:id="@+id/buttonDeleteExpense"
        android:layout_below="@+id/buttonEditExpense"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="deleteButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Show_Expenses"
        android:id="@+id/buttonShowExpenses"
        android:layout_below="@+id/buttonDeleteExpense"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="showButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Finish"
        android:id="@+id/buttonFinish"
        android:layout_below="@+id/buttonShowExpenses"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="finishButton" />
</RelativeLayout>
