<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itcs4180.hw2_expenseapp.DeleteExpenseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/expense_name"
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:layout_below="@+id/buttonSelectExpense"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputName"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLength="50"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Category"
        android:id="@+id/textView3"
        android:textColor="#000000"
        android:layout_below="@+id/inputName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categoryPicker"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dialog"
        android:entries="@array/expense_categories"
        android:prompt="@string/Select_Category" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Amount"
        android:id="@+id/textView4"
        android:textColor="#000000"
        android:layout_below="@+id/categoryPicker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/inputAmount"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Date"
        android:id="@+id/textView5"
        android:textColor="#000000"
        android:layout_below="@+id/inputAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateOutput"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/calenderIcon"
        android:layout_toStartOf="@+id/calenderIcon"
        android:focusable="false"
        android:onClick="showDatePickerDialog" />

    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/calenderIcon"
        android:src="@android:drawable/ic_menu_my_calendar"
        android:background="@android:drawable/ic_menu_my_calendar"
        android:layout_alignBottom="@+id/dateOutput"
        android:layout_alignRight="@+id/inputAmount"
        android:layout_alignEnd="@+id/inputAmount"
        android:onClick="showDatePickerDialog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Receipt"
        android:id="@+id/labelReceipt"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/dateOutput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:id="@+id/receiptImage"
        android:layout_below="@+id/labelReceipt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/labelReceipt"
        android:layout_alignEnd="@+id/labelReceipt"
        android:src="@android:drawable/ic_menu_gallery"
        android:background="@android:drawable/ic_menu_gallery"
        android:onClick="selectImage"
        android:maxHeight="80dp"
        android:maxWidth="75dp"
        android:scaleType="fitXY" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/Delete"
        android:id="@+id/buttonDelete"
        android:onClick="buttonDelete"
        android:layout_alignTop="@+id/buttonCancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/Select_Expense"
        android:id="@+id/buttonSelectExpense"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:id="@+id/buttonCancel"
        android:onClick="buttonCancel"
        android:layout_below="@+id/receiptImage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp" />
</RelativeLayout>
