<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itcs4180.hw2_expenseapp.ShowExpenseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Expense_Details"
        android:id="@+id/textView6"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Name"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Category"
        android:id="@+id/textView8"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Amount"
        android:id="@+id/textView9"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Date"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="outputName"
        android:id="@+id/outputName"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="outputCategory"
        android:id="@+id/outputCategory"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignLeft="@+id/outputName"
        android:layout_alignStart="@+id/outputName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="outputAmount"
        android:id="@+id/outputAmount"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignLeft="@+id/outputCategory"
        android:layout_alignStart="@+id/outputCategory" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="outputDate"
        android:id="@+id/outputDate"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignLeft="@+id/outputAmount"
        android:layout_alignStart="@+id/outputAmount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Receipt"
        android:id="@+id/textView11"
        android:textStyle="bold"
        android:layout_below="@+id/outputDate"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:id="@+id/imageReceipt"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/Finish"
        android:id="@+id/buttonFinish"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageReceipt"
        android:layout_marginTop="10dp" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/buttonPrevious"
        android:src="@android:drawable/ic_media_play"
        android:rotation="180"
        android:background="@android:drawable/ic_media_play"
        android:scaleType="fitXY"
        android:layout_alignTop="@+id/buttonFinish"
        android:layout_toLeftOf="@+id/buttonFinish"
        android:layout_toStartOf="@+id/buttonFinish"
        android:layout_marginRight="20dp"
        android:nestedScrollingEnabled="false"
        android:onClick="previousButton" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/buttonNext"
        android:src="@android:drawable/ic_media_play"
        android:background="@android:drawable/ic_media_play"
        android:scaleType="fitXY"
        android:layout_alignTop="@+id/buttonFinish"
        android:layout_toRightOf="@+id/buttonFinish"
        android:layout_toEndOf="@+id/buttonFinish"
        android:layout_marginLeft="20dp"
        android:onClick="nextButton" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/buttonLast"
        android:src="@android:drawable/ic_media_next"
        android:background="@android:drawable/ic_media_next"
        android:scaleType="fitXY"
        android:layout_alignTop="@+id/buttonFinish"
        android:layout_toRightOf="@+id/buttonFinish"
        android:layout_toEndOf="@+id/buttonNext"
        android:onClick="lastButton" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/buttonFirst"
        android:src="@android:drawable/ic_media_next"
        android:background="@android:drawable/ic_media_next"
        android:scaleType="fitXY"
        android:rotation="180"
        android:layout_alignTop="@+id/buttonPrevious"
        android:layout_toLeftOf="@+id/buttonPrevious"
        android:layout_toStartOf="@+id/buttonPrevious"
        android:onClick="firstButton" />

</RelativeLayout>
